[package]
name = "todo_queue_lib"
version = "0.1.0"
authors = ["Robin Miller <grenewodemiller@gmail.com>"]
build = "build.rs"

[dependencies]
uuid = { version = "0.6", features = ["serde", "v4"] }
lalrpop-util = "0.14.0"
regex = "0.2.1"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
lalrpop = "0.14.0"
